--- a/VotePlatform/Views/Votes/Create.cshtml
+++ b/VotePlatform/Views/Votes/Create.cshtml
@@ -1,5 +1,8 @@
 ﻿@model PreprocessorVoteSettings
-<form action="">
+@{
+    string actionStr = @$"{VRoutes.Controller}{VRoutes.ACreating}?organizationId={Model.OwnerOrganization}&countAnswers={Model.CountAnswers}";
+} 
+<form action=@actionStr>
     <input for="mh" type="text" name="mainheader" />
     <label id="mh">Заголовок:</label>
     <input type="text" for="md" name="maindescription"/>
@@ -24,12 +27,57 @@
     <div>
         <h2>Режим голосования:</h2>
         <label for="alone">Один ответ</label>
-        <input id="alone" type="radio" name="votetype" value="alone" checked />
+                <input id="alone" type="radio" name="votetype" value="alone" checked />
         <label for="some">Несколько ответов</label>
-        <input id="some" type="radio" name="votetype" value="some" />
+                <input id="some" type="radio" name="votetype" value="some" />
         <label for="prefer">Предпочтения по приоритету</label>
-        <input id="prefer" type="radio" name="votetype" value="prefer" />
+                <input id="prefer" type="radio" name="votetype" value="prefer" />
+    </div>
+    
+    <div>
+
+        <input type="datetime" id="activetime" name="activetime" />
+        <label for="activetime">Доступно до:</label>
+
+        <input type="checkbox" id="ep" name="ep" checked />
+        <label for="ep">Возможно продление</label>
+    
+        <input type="checkbox" id="iat" name="iat" checked/>
+        <label for="iat">Голосование бессрочно</label>
+
+        <input type="checkbox" id="rac" name="rac" checked />
+        <label for="rac">Результаты по окончании</label>
+    
     </div>
 
+        <input type="checkbox" id="av" name="av" checked />
+        <label for="av">Анонимное голосование</label>
+
+        <input type="checkbox" id="prv" name="prv" checked />
+        <label for="prv">Возможно переголосовать</label>
+    
+
+    @{
+        List<RoleRadioBlock> blocks = new List<RoleRadioBlock>() 
+        {new RoleRadioBlock("Голосовать может:","minroletovoting"), new RoleRadioBlock("Просматривать результаты может:","minroletoactual"),
+        new RoleRadioBlock("Просматривать динамику может:","minroletodynamic") };
+    }
+    @{
+        foreach(var block in blocks){
+    <div>
+        <h2>@block.actionView</h2>
+        <label for="owner">Владелец</label>
+                <input id="owner" type="radio" name=@block.actionName value="owner" />
+        <label for="admin">Администратор</label>
+                <input id="admin" type="radio" name=@block.actionName value="admin" />
+        <label for="audience">Участник группы</label>
+                <input id="audience" type="radio" name=@block.actionName value="audience" />
+        <label for="passerby">Обыватель</label>
+                <input id="passerby" type="radio" name=@block.actionName value="passerby" checked />
+    </div>
+        }
+    }
+
+    <button type="submit">Создать голосование</button>
 
 </form>
